# langchain-academy

./: pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: agent.py  router.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-2/: chatbot-external-memory.ipynb  chatbot-summarization.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-3/: breakpoints.ipynb  edit-state-human-feedback.ipynb  streaming-interruption.ipynb  time-travel.ipynb
