[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.19",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.12",
    "langsmith>=0.7.22",
    "logger>=1.4",
    "logging>=0.4.9.6",
    "notebook>=7.5.5",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
